assets/css/streetr.css
/* COLOR PALLETTE */

.color_pallette{
  color: #2196F3;
  color: #5DA1D6;
  color: #1C7FCE;
  color: #223B4E;
  color: #15609B;
}

.hidden{
  visibility: hidden !important;
}

.streetr-main-btn{
  background: #77bef5;
  color: #0367b4;
}
/* SMALL */
@media screen and (max-width: 425px)
{
  .showcase h2,
  .showcase .content
  {
    text-align: center;
  }
}

/* MEDIUM */
@media screen and (min-width: 425px) and (max-width: 768px)
{
  .showcase h2,
  .showcase .content
  {
    text-align: center;
  }

  .iphone-section-1{
    width: 50%;
    height: 100%;
    margin-left: auto;
    margin-right: auto;
  }

  .value-container{
    height: 100vh;
    overflow: hidden;
  }

  .values .row{
    margin-bottom: 0;
  }

  .section{
    padding-bottom: 0;
    padding-top: 0;

  }

}

/* LARGE */
@media screen and (min-width: 768px)
{


  .iphone-section-container{
    height: 100vh;
  }

  .iphone-section-1{
    height: 86%;
    width: auto;
    margin-left: auto;
    margin-right: auto;
  }

  .values .row{
    display: flex;
    -webkit-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .showcase .content{
    border-left: 2px solid #2196F3;
    padding-left: 30px;
    font-weight: lighter;
    font-size: 19px;
    margin-left: 5px;
  }
}

h2{
  font-weight: 400;
}

.collection .collection-item.active{
  background-color: #2196F3;
  color: white !important;
}

.collection .collection-item{
  color: #2196F3 !important;
}

.full-page-120{
  overflow: hidden;
}

.full-page{
  height: 100vh;
}

.new-line{
  white-space:nowrap;

}

.showcase{
  padding: 30px;
}

blockquote{
  font-size: 19px;
}

.full-page-120 .container .title{
  margin-top: 50px;

}

.iphones{
  overflow: hidden;
  height: 500px;
  position: relative;
  bottom: 0;
}


.iphones .iphone-left,
.iphones .iphone-center,
.iphones .iphone-right {
  width: 310px;
  z-index: 1;
  position: relative;
}

.iphones .iphone-left{
  width: 310px;
  z-index: 1;
  position: absolute;
  margin: 0 auto;
  right: 45%;
  top: 50px;
  left: 0;
  -ms-filter: â€œalpha(opacity=0)â€;
  filter: alpha(opacity=0);
  -khtml-opacity: 0;
  -moz-opacity: 0;
  opacity: 0;

}

.iphones .iphone-center{
  width: 330px;
  z-index: 3;
  position: absolute;
  margin: 0 auto;
  right: 0;
  left: 0;
  top: 0px;
  -ms-filter: “alpha(opacity=0)”;
  filter: alpha(opacity=0);
  -khtml-opacity: 0;
  -moz-opacity: 0;
  opacity: 0;
}

.thank-you-title{
    margin-top: 0 !important;
}

.icon-block {
    padding: 0 15px;
}
.icon-block .material-icons {
    font-size: inherit;
}

.iphones .iphone-right{
  width: 310px;
  z-index: 1;
  position: absolute;
  margin: 0 auto;
  left: 45%;
  top: 50px;
  right: 0;
  -ms-filter: â€œalpha(opacity=0)â€;
  filter: alpha(opacity=0);
  -khtml-opacity: 0;
  -moz-opacity: 0;
  opacity: 0;
}



.streetr-field{
  border: 2px solid rgb(41, 182, 246);
  border-radius: 5px;
  margin: 0;
  padding-right: 0 !important;
  padding-left: 5px !important;
}

.streetr-field input:focus{
  outline: none;

}

.streetr-field input{
  margin-left: 0;
  border: none;
  position: relative;
  width: auto;
  padding: 25px;
  padding-right: 0 !important;
  width: 80%;
  font-size: 20px;
}

.streetr-field button{
  padding: 25px;
  position: relative;
  float: right;
  background-color: rgb(41, 182, 246);
  border: 2px solid rgb(41, 182, 246);
  color: white;
}

.gmap{
  width: 100%;
}

.bold{
  font-weight: 500;
}

.image-overlay-intro{
  height: auto;
  background-color: rgba(34, 59, 78,0.86);
}

.brand-logo{
  padding-left: 20px !important;
    font-family: Bitter;
}

.header{
    font-family: Bitter;

}

.image-overlay{
  height: auto;
  padding: 150px 0;
  background-color: rgba(61,70,100,0.86);
}

#download, .intro{
  background: url(../img/backgrounds/background.jpg) no-repeat center top fixed;
  position: relative;
  z-index: 0;
  overflow: hidden;
  padding: 0;
  -webkit-background-size: cover !important;
  -moz-background-size: cover !important;
  -ms-background-size: cover !important;
  -o-background-size: cover !important;
  background-size: cover !important;
  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/backgrounds/signup-bg.jpg', sizingMethod='scale');
  -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/backgrounds/signup-bg.jpg', sizingMethod='scale')";
}

#download input{
  color: white;
}


#sidenav-overlay {
    z-index: 1;
}
.social-footer{
  padding-right: 0px;
}

